--- a/.pylintrc
+++ b/.pylintrc
@@ -7,6 +7,7 @@ disable=
       W0703, #catching too general exception Exception
       R0903, #too-few-public-methods
       C0303,
+      W0719, #broad-exception-raised
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
 # only in one or another interpreter, leading to false positives when analysed.
